--- a/bootstrap/project.html
+++ b/bootstrap/project.html
@@ -107,6 +107,10 @@ So, give it a try and dive into a world of royal restaurant websites.</label>
             <img id="img3" src="./images/y4.jpg" alt="">
             <img id="img3" src="./images/y6.jpg" alt="">
         </div>
+        <div class="r7">
+         <h3 id="f1">from the menu</h3>
+         <img id="menu" src="./images/octopus.jpg" class="rounded-circle" alt=""><label id="menudesc"></label>
+        </div>
 
       </div>
       
