--- a/bootstrap/project.html
+++ b/bootstrap/project.html
@@ -108,8 +108,27 @@ So, give it a try and dive into a world of royal restaurant websites.</label>
             <img id="img3" src="./images/y6.jpg" alt="">
         </div>
         <div class="r7">
-         <h3 id="f1">from the menu</h3>
-         <img id="menu" src="./images/octopus.jpg" class="rounded-circle" alt=""><label id="menudesc"></label>
+         <h3 id="f1">From the menu</h3>
+         <img id="menu" src="./images/octopus.jpg" class="rounded-circle" alt="">
+         <div class="r8">
+           <h5>Grilled octopus</h5>
+           
+         <strong> The octopus is caught fresh daily, hung out to dry in the sun and then grilled on charcoal. The outside is blackened with a nice crunchy texture and the inside is chewy and juicy. The octopus is prepared so perfectly and so flavorful that it needs minimal dressing, and is served with a simple wedge of lemon.</strong><br>
+              <b>$15</b>
+        </div>
+        <img id="menu" src="./images/fried oyster.jpg" alt="" class="rounded-circle">
+        <div class="r9">
+          <h5>Fried oyster</h5>
+           
+          <strong> the oysters are usually dipped in batter, optionally coated in breadcrumbs and various seasonings, and finally shortly fried until crispy and golden. The batter is occasionally made with buttermilk, which creates a lighter, slightly sour coating that perfectly complements the oysters.</strong><br>
+          <b>$10</b>
+        </div>
+        <img id="menu" src="./images/kaki fry.jpg" alt="" class="rounded-circle">
+        <div class="r10">
+        <h5>Kaki fry</h5>
+        <strong>The dish is commonly prepared in restaurants or at home, and it consists of shucked oysters that are dusted with flour and dipped in beaten eggs before they are coated in panko breadcrumbs and finally deep-fried until crispy and golden.</strong><br>
+         <b>$12</b>
+      </div>
         </div>
 
       </div>
